array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  numbers(2)
}